# deadfish

./: .bazelrc  .gitignore  .gitmodules  Makefile  README.md  WORKSPACE  deadfish.fbs  generate.ps1  generate.sh  log
assets/siemano/: PALETTE_LIST  scene.elementTable  scene.versionTable  siemano.aux~  siemano.xstage  siemano.xstage~
assets/siemano/elements/Drawing/: Drawing-1.tvg  Drawing-10.tvg  Drawing-11.tvg  Drawing-12.tvg  Drawing-13.tvg  Drawing-14.tvg  Drawing-15.tvg  Drawing-16.tvg  Drawing-16.tvg~  Drawing-17.tvg  Drawing-18.tvg  Drawing-18.tvg~  Drawing-2.tvg  Drawing-3.tvg  Drawing-4.tvg  (+7 more)
assets/siemano/palette-library/: siemano.plt  siemano.plt~
client/: .gitignore  README.md  bootstrap-native.sh  bootstrap-wasm.sh  electron-main.js  pack-wasm.sh  package-lock.json  package.json  recmake_dfclient_native.sh  recmake_dfclient_wasm.sh  runnpm.bat  spritepacker.ini  spritepacker.py  tsconfig.json  tslint.json  webpack.dev.config.js  webpack.dist.config.js
client/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/dfclient/: CMakeLists.txt  deadfish.ini.example
client/dfclient/cmake/: package_info.cmake  package_options.cmake
client/dfclient/include/: death_report_processor.hpp  fb_util.hpp  fbutil.hpp  fov.hpp  game_data.hpp  game_state.hpp  gameplay_state.hpp  http_client.hpp  lerp_component.hpp  loading_state.hpp  lobby_state.hpp  lobbystate.hpp  main.h  menu_state.hpp  messages.hpp  resources.hpp  state_manager.hpp  text_creator.hpp  text_creator_templates.hpp  util.hpp  websocket.hpp
client/dfclient/js/: dfwebsocket.js
client/dfclient/src/: death_report_processor.cpp  fov.cpp  game_state.cpp  gameplay_state.cpp  gameplay_state_death_reports.cpp  http_client.cpp  loading_state.cpp  lobby_state.cpp  lobbystate.cpp  main.cpp  menu_state.cpp  menustate.cpp  process_death_report.cpp  resources.cpp  state_manager.cpp  statemanager.cpp  text_creator.cpp  util.cpp  websocket.cpp
client/scripts/: generateAssetsClass.js  packageElectronApp.js  setupGameSize.js
client/src/: app.ts  assets.ts  globals.d.ts  websocket.ts
client/src/states/: boot.ts  gameplay.ts  lobby.ts  preloader.ts  title.ts
client/src/utils/: assetUtils.ts  fbutil.ts  utils.ts
client/templates/: index.ejs
common/: constants.hpp  geometry.hpp  types.hpp
cppserver/: CMakeLists.txt  deadfish.hpp  game.hpp  game_thread.cpp  main.cpp  mobs.cpp
cppserver/cmake_modules/: FindBox2D.cmake
emclient/: .gitignore  bootstrap-wasm.sh  bootstrap.sh  clean-native.sh  clean-wasm.sh  clean.sh  recmake_dfclient.sh
emclient/dfclient/: CMakeLists.txt
emclient/dfclient/cmake/: package_info.cmake  package_options.cmake
emclient/dfclient/include/: gamedata.hpp  gameplaystate.hpp  gamestate.hpp  lobbystate.hpp  main.h  menustate.hpp  statemanager.hpp  websocket.hpp
emclient/dfclient/js/: dfwebsocket.js
emclient/dfclient/src/: gameplaystate.cpp  lobbystate.cpp  main.cpp  menustate.cpp  statemanager.cpp  websocket.cpp
env/: Dockerfile  build-docker.sh  build-server-prod-docker.sh  dfctl  dfctl-completion.bash  exec-docker.sh  fleet.yaml  gameserver.yaml  run-docker.sh
env/deadfish-server/: .gitignore  Dockerfile
env/df-dev-env/: Dockerfile
levelpacker/: .gitignore  levelpacker.ini  levelpacker.py  pack_all.sh  requirements.txt
levels/: big.json  big.tmx  big_sand.tmx  default_tileset.tsx  farm.tmx  leveltechtest.tmx  new.tmx  ship.tmx  showcase.tmx  template.tmx  test.json  test.tmx  testrot.tmx
levels/tilesets/: default_tileset.tsx  sand_tileset.tsx
server/: BUILD  CMakeLists.txt  Cargo.toml  agones.cpp  agones.hpp  build.sh  constants.hpp  deadfish.cpp  deadfish.hpp  deadfish.ini  game_thread.cpp  game_thread.hpp  gcc_version.cpp  level_loader.cpp  level_loader.hpp  main.cpp  mobs.cpp  raycasting.cpp  raycasting.hpp  run_server.sh  skills.cpp  skills.hpp  websocket.cpp  websocket.hpp
server/src/: main.rs
spritepacker/: pack_all_fish.py  requirements.txt  spritepacker.ini  spritepacker.py
test/: connect_test.py  deadfish_test.py  requirements.txt
(+20 files in other folders)
